# GraphBot

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml  server.py
backend/config/: custom_logger.py  logging_config.py
backend/src/: create_chunks.py  create_document.py  create_source_node.py  extract_relationships.py  main.py  neo4j_functions.py
backend/src/chat/: advanced_chain.py  chains.py
backend/src/graph_post_processing/: entity_resolution.py
backend/src/validation/: api_response.py  client_auth.py  source_node.py
frontend/: Dockerfile  README.md  app.py  auth.py  pyproject.toml
frontend/pages/: 1_📁_Document_Upload.py  2_✏️_Data_Manager.py  3_💬_Chat.py  4_🧠_Agent.py
